src/containers/myAccount/components/styles.scss
@import "../../../styles/partials/form";
@import "../../../styles/partials/mixins";

input[type="text"]{
  height: 50px !important;
}

.form-heading {
  @include h2_24px_lora_charcoal();
  line-height: 50px;
  margin-top: 30px;
}
.form-subheading{
  @include b4_12px_montserrat_charcoal();
  letter-spacing: 0.36px;
  padding: 0px 52px;
  line-height: 20px;
  &.track-order{
    padding: 0px 100px
  }
}
@media screen  and (max-width: 992px){
  .form-subheading{
    padding : 0px;
    &.track-order{
      padding: 0px 20px;
    }
  }
}

.disabledInput{
  input{
    background: #E5E5E526 !important;
    color: #9F9F9F !important;
  }
  select{
    background: #E5E5E526 !important;
    color: #777777 !important;
    &:disabled{
      color: #777777 !important;
      background: #E5E5E526 !important;
    }
  }
}

.form-heading-multi {
  line-height: 36px;
}

.icon-signedin {
  span {
    padding: 0 5px;
    position: relative;
    i {
      background: grey;
      border-radius: 50%;
      height: 30px;
      width: 30px;
      font-size: 20px;
      vertical-align: middle;
      color: white;
      &:before{
        position: absolute;
        top: -2px;
        left: 10px;
      }
    }
  }
}

.order-tabs {
  margin-top: 40px;
  .order-tab {
    @include b3_14px_montserrat_light_charcoal();
    &:hover{
      cursor: pointer;
      font-weight: $semibold;
      color: $gold;
    }
    &.active{
      font-weight: $semibold;
      color: $gold;
    }
  }
  .orders {
    cursor: pointer;
    font-size: 15px;
    color: #afa5a5;
  }

  .hr-line {
    color: #afa5a5;
    margin-right: 26px;
    margin-left: 26px;
    font-weight: 100;
  }

  .active {
    color: $gold;
  }
}

.no-purchases-message {
  @include b3_14px_montserrat_charcoal();
  letter-spacing: 0.5px;
  opacity: unset;
}

.start-shopping-button {
  margin: auto;
  margin-top: 30px;
  width: 50%;
  a{
    input {
      text-transform: uppercase;
      background-color: #4C4C4C;
      @include b3_14px_montserrat_white();
      letter-spacing: 0.5px;
      border: 1px solid #4c4c4c;
      line-height: 50px;
      width: 100%;
      &:hover{
        color: #4C4C4C;
        background-color: #fff;
        border: 1px solid #4c4c4c;
      }
    }
  }
}

.op2 {
  opacity: .6;
}
.font-bold {
  font-weight: bold;
}
/* ... */

